objects/Customer_Win_Stronger_Together_Award__c.object
<CustomObject>
    <fields>
        <fullName>Account_Team__c</fullName>
        <description>Account Team</description>
        <inlineHelpText>Hint: Max 10 user ids. First two should be the primary persons responsible for the deal. Stronger Together Award entries can only include Cisco employees.</inlineHelpText>
        <label>Account Team</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Best_Practices_Advice_to_Other_Sellers__c</fullName>
        <description>Best Practices/Advice to Other Sellers</description>
        <inlineHelpText>Hint: How did your extended sales team help with this business? How would you describe their support and impact as a best practice for other sales teams? How does this Customer Win help drive our sales priorities?</inlineHelpText>
        <label>Best Practices/Advice to Other Sellers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CX_Lifecycle__c</fullName>
        <description>CX Lifecycle</description>
        <label>CX Lifecycle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Competitive Take Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Business_Outcomes__c</fullName>
        <description>Customer Business Outcomes</description>
        <label>Customer Business Outcomes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <description>Customer Description</description>
        <label>Customer Description</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <description>Deal Description</description>
        <label>Deal Description</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Reference__c</fullName>
        <description>External Reference</description>
        <label>External Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Only (Customer willing to speak with other Cisco Sales teams)</fullName>
                </value>
                <value>
                    <fullName>Customer-to-Customer (Customer willing to speak with other Customers)</fullName>
                </value>
                <value>
                    <fullName>External (Public Case Study)</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Opportunities_in_thousands_USD__c</fullName>
        <description>Future Opportunities (in thousands USD)</description>
        <label>Future Opportunities (in thousands USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_Was_the_Opportunity_Discovered__c</fullName>
        <description>How Was the Opportunity Discovered?</description>
        <label>How Was the Opportunity Discovered?</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Of_Customer_Employees_Base__c</fullName>
        <description># Of Customer Employees Base</description>
        <label># Of Customer Employees Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;1000</fullName>
                </value>
                <value>
                    <fullName>&lt;=1000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity Name</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Wins/Stronger Together Awards</relationshipLabel>
        <relationshipName>Customer_Wins_Stronger_Together_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Submit_For_Stronger_Together_Award__c</fullName>
        <description>Submit For Stronger Together Award</description>
        <label>Submit For Stronger Together Award</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Win/Stronger Together Award</label>
    <nameField>
        <displayFormat>CW-{0}</displayFormat>
        <label>Customer Win/Stronger Together Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Wins/Stronger Together Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>